kubernetes/apps/security/trivy-server/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: trivy-server
  annotations:
    external-dns.alpha.kubernetes.io/target: internal.${SECRET_DOMAIN}
spec:
  parentRefs:
    - name: internal
      namespace: network
      kind: Gateway
  hostnames:
    - trivy.${SECRET_DOMAIN}
  rules:
    - backendRefs:
        - name: trivy-server
          port: 4954
